add getCode http controller

--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
     <!-- main start -->
     <section class="cont">
       <div class="code-wrap">
-        <span>邀请码：&nbsp;&nbsp;<b id="code">OH7U</b></span>
-        <a id="copy-btn">复制邀请码</a>
+        <span>邀请码：&nbsp;&nbsp;<b class="code">****</b></span>
+        <a class="copy-btn">复制邀请码</a>
       </div>
       <span id="fixed" style="display: none">已复制到剪贴板!</span>
       <div class="tip">找大额隐藏优惠券 上多米生活!</div>
@@ -71,6 +71,8 @@
         </footer> -->
     <!-- footer end -->
   </div>
+  <script src="./js/vendor/zepto.1.2.0.min.js"></script>
+  <script src="./js/vendor/clipboard.min.js"></script>
   <script src="./js/index.js"></script>
 </body>
 </html>
